--- a/Lorentz_Force/Lorentz_Force.html
+++ b/Lorentz_Force/Lorentz_Force.html
@@ -41,8 +41,8 @@
     }
 
     #toc ol {
+      margin: 0.25em 0em 0em 0.5em;
       list-style-type: decimal;
-      margin: 0.25em 0em 0em 0.25em;
       padding-inline-start: 1em;
     }
 
@@ -555,7 +555,7 @@
         </a>
         <ol class="toc" style="display: none;">
           <li>
-            <a href="#computing-bfvec-f-and-f-using-vector-notation" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" lo="38" class="highlighted">
+            <a href="#computing-bfvec-f-and-f-using-vector-notation" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" lo="38">
               <span class="toctext">Computing <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                       <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
@@ -568,19 +568,19 @@ c-16-25.333-24-45-24-59z"></path>
             </a>
           </li>
           <li>
-            <a href="#example" raw="## Example" lo="70" class="">
+            <a href="#example" raw="## Example" lo="70">
               <span class="toctext">Example</span>
             </a>
           </li>
           <li>
-            <a href="#problem" raw="## Problem" lo="97" class="">
+            <a href="#problem" raw="## Problem" lo="97">
               <span class="toctext">Problem</span>
             </a>
           </li>
         </ol>
       </li>
       <li>
-        <a href="#trajectories" raw="# Trajectories" lo="179">
+        <a href="#trajectories" raw="# Trajectories" lo="179" class="highlighted">
           <span class="toctext">Trajectories</span>
         </a>
         <ol class="toc" style="display: none;">
@@ -879,7 +879,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="38" lf="38" class="highlighted"><a name="computing-bfvec-f-and-f-using-vector-notation" number="2.1" lo="38" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" class="anchor hanchor" href="#computing-bfvec-f-and-f-using-vector-notation"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Computing <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <h2 lo="38" lf="38"><a name="computing-bfvec-f-and-f-using-vector-notation" number="2.1" lo="38" raw="## Computing $\bfvec{F}$ and $F$ Using Vector Notation" class="anchor hanchor" href="#computing-bfvec-f-and-f-using-vector-notation"><span class="hnumber">2.1</span>&nbsp;<span class="htext">Computing <span len="11" raw="_\bfvec{F}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.9691em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                     <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -991,7 +991,7 @@ __" class="katex-display fleqn"><span class="katex katex-display" style="display
         <div class="block-info" style="display: none;"><span class="line-numbers">62</span></div>
       </div>
       <div class="block">
-        <div class="inline-html active" lo="64" lf="64">
+        <div class="inline-html" lo="64" lf="64">
           <img src="../Cross_Products/figures/Cyclic_ijk.svg">
         </div>
         <div class="block-info" style="display: none;"><span class="line-numbers">64</span></div>
@@ -1015,7 +1015,7 @@ __" class="katex-display fleqn"><span class="katex katex-display" style="display
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="70" lf="70" class=""><a name="example" number="2.2" lo="70" raw="## Example" class="anchor hanchor" href="#example"><span class="hnumber">2.2</span>&nbsp;<span class="htext">Example</span></a></h2>
+        <h2 lo="70" lf="70"><a name="example" number="2.2" lo="70" raw="## Example" class="anchor hanchor" href="#example"><span class="hnumber">2.2</span>&nbsp;<span class="htext">Example</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">70</span></div>
       </div>
       <div class="block">
@@ -1172,7 +1172,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h2 lo="97" lf="97" class=""><a name="problem" number="2.3" lo="97" raw="## Problem" class="anchor hanchor" href="#problem"><span class="hnumber">2.3</span>&nbsp;<span class="htext">Problem</span></a></h2>
+        <h2 lo="97" lf="97"><a name="problem" number="2.3" lo="97" raw="## Problem" class="anchor hanchor" href="#problem"><span class="hnumber">2.3</span>&nbsp;<span class="htext">Problem</span></a></h2>
         <div class="block-info" style="display: none;"><span class="line-numbers">97</span></div>
       </div>
       <div class="block">
@@ -1532,7 +1532,7 @@ c-16-25.333-24-45-24-59z"></path>
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="179" lf="179"><a name="trajectories" number="3" lo="179" raw="# Trajectories" class="anchor hanchor" href="#trajectories"><span class="hnumber">3</span>&nbsp;<span class="htext">Trajectories</span></a></h1>
+        <h1 lo="179" lf="179" class="highlighted"><a name="trajectories" number="3" lo="179" raw="# Trajectories" class="anchor hanchor active" href="#trajectories"><span class="hnumber">3</span>&nbsp;<span class="htext">Trajectories</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">179</span></div>
       </div>
       <div class="block">
