--- a/Lorentz_Force/README.html
+++ b/Lorentz_Force/README.html
@@ -41,8 +41,8 @@
     }
 
     #toc ol {
+      margin: 0.25em 0em 0em 0.5em;
       list-style-type: decimal;
-      margin: 0.25em 0em 0em 0.25em;
       padding-inline-start: 1em;
     }
 
@@ -289,11 +289,6 @@
       width: 100%;
       margin-left: 1em;
       padding-left: 0.5em;
-    }
-
-    #display>.section>.block &>ol.compact {
-      margin-top: 0.25em;
-      margin-bottom: 0.25em;
     }
 
     #display>.section>.block>ol.loose {
@@ -547,7 +542,7 @@
 </head>
 
 <body class="body">
-  <div id="toc" style="display: block; min-width: 5em;">
+  <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
         <a href="#rsw-notes-to-self" raw="# rsw notes to self" lo="2" class="highlighted">
@@ -565,7 +560,7 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">2</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="4" lf="4" class="active">Project <a href="https://ophysics.com/em8.html">https://ophysics.com/em8.html</a> on screen before class starts.</p>
+        <p padlength="0" lo="4" lf="4" class="">Project <a href="https://ophysics.com/em8.html">https://ophysics.com/em8.html</a> on screen before class starts.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">4</span></div>
       </div>
       <div class="block">
@@ -573,7 +568,15 @@
         <div class="block-info" style="display: none;"><span class="line-numbers">6</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="8" lf="8" class="">In Part 2., the absolute value and magnitude operators are used in the third step of <span len="63" raw="_|\bfvec{F}| = |-qv_oB_o\jhat| = |-qv_oB_o||\jhat| = |q|v_oB_o_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.2191em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="8" lf="8" class="">Part 3. Usually requires 5-minutes of explanation on the board. After the first student has finished Part 2., stop class and explain part 3. Otherwise, many students get stuck on the problems.</p>
+        <div class="block-info" style="display: none;"><span class="line-numbers">8</span></div>
+      </div>
+      <div class="block">
+        <p padlength="0" lo="10" lf="10" class="active">Remind students that figure is repeated on following page. Many students put all answers on page with first figure.</p>
+        <div class="block-info" style="display: none;"><span class="line-numbers">10</span></div>
+      </div>
+      <div class="block">
+        <p padlength="0" lo="12" lf="12" class="">In Part 2., the absolute value and magnitude operators are used in the third step of <span len="63" raw="_|\bfvec{F}| = |-qv_oB_o\jhat| = |-qv_oB_o||\jhat| = |q|v_oB_o_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:1.2191em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.9691em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf">F</span></span><span style="top:-3.2551em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.1522em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                 <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -582,14 +585,10 @@
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
                               </svg></span></span></span></span></span></span></span><span class="mord">∣</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0502em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord accent"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord"><span class="mord boldsymbol"></span></span></span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.25em;"><span class="mord">^</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.1944em;"><span></span></span></span></span></span><span class="mord">∣</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0502em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord">∣∣</span><span class="mord accent"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.7079em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord"><span class="mord"><span class="mord boldsymbol"></span></span></span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.25em;"><span class="mord">^</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.1944em;"><span></span></span></span></span></span><span class="mord">∣</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1em;vertical-align:-0.25em;"></span><span class="mord">∣</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mord">∣</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">v</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.05017em;">B</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.1514em;"><span style="top:-2.55em;margin-left:-0.0502em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mathnormal mtight">o</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span></span></span></span>. Few students notice this and I typically ask about the distinction after the’ve used it implicitly in a few of their solutions.</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">8</span></div>
+        <div class="block-info" style="display: none;"><span class="line-numbers">12</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="10" lf="10" class="">Part 3. Usually requires 5-minutes of explanation on the board. After the first student has finished Part 2., stop class and explain part 3.</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">10</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="12" lf="12" class="">The activity does not disucss what happens when <span len="17" raw="_q\rightarrow -q_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">→</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.7778em;vertical-align:-0.1944em;"></span><span class="mord">−</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span></span></span></span> changes sign or <span len="33" raw="_\bfvec{v}\rightarrow -\bfvec{v}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7274em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7274em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf" style="margin-right:0.01597em;">v</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.2077em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
+        <p padlength="0" lo="14" lf="14" class="">The activity does not disucss what happens when <span len="17" raw="_q\rightarrow -q_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.625em;vertical-align:-0.1944em;"></span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">→</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:0.7778em;vertical-align:-0.1944em;"></span><span class="mord">−</span><span class="mord mathnormal" style="margin-right:0.03588em;">q</span></span></span></span> changes sign or <span len="33" raw="_\bfvec{v}\rightarrow -\bfvec{v}_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.7274em;"></span><span class="mord accent"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.7274em;"><span style="top:-3em;"><span class="pstrut" style="height:3em;"></span><span class="mord mathbf" style="margin-right:0.01597em;">v</span></span><span style="top:-3.0134em;"><span class="pstrut" style="height:3em;"></span><span class="accent-body" style="left:-0.2077em;"><span class="overlay" style="height:0.714em;width:0.471em;"><svg xmlns="http://www.w3.org/2000/svg" width="0.471em" height="0.714em" style="width:0.471em" viewBox="0 0 471 714" preserveAspectRatio="xMinYMin">
                                 <path d="M377 20c0-5.333 1.833-10 5.5-14S391 0 397 0c4.667 0 8.667 1.667 12 5
 3.333 2.667 6.667 9 10 19 6.667 24.667 20.333 43.667 41 57 7.333 4.667 11
 10.667 11 18 0 6-1 10-3 12s-6.667 5-14 9c-28.667 14.667-53.667 35.667-75 63
@@ -606,15 +605,19 @@ c-16-25.333-24-45-24-59z"></path>
 H213l-171-1c-8.667-6-13-12.333-13-19 0-4.667 4.333-11.333 13-20h359
 c-16-25.333-24-45-24-59z"></path>
                               </svg></span></span></span></span></span></span></span></span></span></span>. I typically wait for students to realize that this seems important and ask.</p>
-        <div class="block-info" style="display: none;"><span class="line-numbers">12</span></div>
-      </div>
-      <div class="block">
-        <p padlength="0" lo="14" lf="14" class="">Remind students of the convention for “into the page” and “out of page” vector directions.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">14</span></div>
       </div>
       <div class="block">
-        <p padlength="0" lo="16" lf="16" class="">Discuss the fact that the figure in 2.2 does not indicate the direction of <span len="3" raw="_z_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.04398em;">z</span></span></span></span> and that the right–hand rule dictates that it must be out of the page (and it is was not, the coordinate system would not be “right–handed” and the right–hand rules would not give correct answers).</p>
+        <p padlength="0" lo="16" lf="16" class="">Remind students of the convention for “into the page” and “out of page” vector directions.</p>
         <div class="block-info" style="display: none;"><span class="line-numbers">16</span></div>
+      </div>
+      <div class="block">
+        <p padlength="0" lo="18" lf="18" class="">Discuss the fact that the figure in 2.2 does not indicate the direction of <span len="3" raw="_z_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.4306em;"></span><span class="mord mathnormal" style="margin-right:0.04398em;">z</span></span></span></span> and that the right–hand rule dictates that it must be out of the page (and it is was not, the coordinate system would not be “right–handed” and the right–hand rules would not give correct answers).</p>
+        <div class="block-info" style="display: none;"><span class="line-numbers">18</span></div>
+      </div>
+      <div class="block">
+        <p padlength="0" lo="21" lf="21" class="">Remind students not to equate a scalar to a vector.</p>
+        <div class="block-info" style="display: none;"><span class="line-numbers">21</span></div>
       </div>
     </div>
   </div>
