--- a/Electric_Force/Electric_Force.html
+++ b/Electric_Force/Electric_Force.html
@@ -556,7 +556,7 @@
   <div id="toc" style="min-width: 5em;">
     <ol>
       <li>
-        <a href="#coulomb-s-law" raw="# Coulomb's Law" lo="8">
+        <a href="#coulomb-s-law" raw="# Coulomb's Law" lo="8" class="highlighted">
           <span class="toctext">Coulomb’s Law</span>
         </a>
       </li>
@@ -599,7 +599,7 @@
     </div>
     <div class="section">
       <div class="block">
-        <h1 lo="8" lf="8" class="active"><a name="coulomb-s-law" number="1" lo="8" raw="# Coulomb's Law" class="anchor hanchor" href="#coulomb-s-law"><span class="hnumber">1</span>&nbsp;<span class="htext">Coulomb’s Law</span></a></h1>
+        <h1 lo="8" lf="8" class="active highlighted"><a name="coulomb-s-law" number="1" lo="8" raw="# Coulomb's Law" class="anchor hanchor active" href="#coulomb-s-law"><span class="hnumber">1</span>&nbsp;<span class="htext">Coulomb’s Law</span></a></h1>
         <div class="block-info" style="display: none;"><span class="line-numbers">8</span></div>
       </div>
       <div class="block">
@@ -862,7 +862,7 @@ c-16-25.333-24-45-24-59z"></path>
             </div>
             <div class="block">
               <div class="inline-html" lo="67" lf="69">
-                <div class="solutionstrue">
+                <div class="solutionstrue" style="display: none;">
                   <div class="block">
                     <div class="inline-html">
                       <div class="newpage">
@@ -934,7 +934,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="81" lf="112">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Solution}" markerlength="4"> Solution</strong></p>
             </div>
@@ -1031,7 +1031,7 @@ c-16-25.333-24-45-24-59z"></path>
               </ol>
             </div>
           </div>
-          <div class="solutionsfalse">
+          <div class="solutionsfalse" style="display: block;">
             <div class="block">
               <div class="inline-html">
                 <img src="figures/grid.svg" style="width:90%">
@@ -1061,7 +1061,7 @@ c-16-25.333-24-45-24-59z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="118" lf="133">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Solution}" markerlength="4"> Solution</strong></p>
             </div>
@@ -1168,7 +1168,7 @@ M834 80h400000v40h-400000z"></path>
               </ol>
             </div>
           </div>
-          <div class="solutionsfalse">
+          <div class="solutionsfalse" style="display: block;">
             <div class="block">
               <div class="inline-html">
                 <img src="figures/grid.svg" style="width:80%">
@@ -1190,7 +1190,7 @@ M834 80h400000v40h-400000z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="139" lf="166">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Solution}" markerlength="4"> Solution</strong>
                 <img src="figures/Two_Charges-d.svg">
@@ -1319,7 +1319,7 @@ M834 80h400000v40h-400000z"></path>
               </ol>
             </div>
           </div>
-          <div class="solutionsfalse">
+          <div class="solutionsfalse" style="display: block;">
             <div class="block">
               <div class="inline-html">
                 <img src="figures/grid.svg" style="width:75%">
@@ -1341,7 +1341,7 @@ M834 80h400000v40h-400000z"></path>
       </div>
       <div class="block">
         <div class="inline-html" lo="172" lf="174">
-          <div class="solutionstrue">
+          <div class="solutionstrue" style="display: none;">
             <div class="block">
               <p padlength="0"><strong raw="{\bf Solution}" markerlength="4"> Solution</strong>: <span len="52" raw="_F=k|q_1q_2|/\left((x_2-x_1)^2 + (y_2-y_1)^2\right)_" class="katex"><span class="katex-html" aria-hidden="true"><span class="base"><span class="strut" style="height:0.6833em;"></span><span class="mord mathnormal" style="margin-right:0.13889em;">F</span><span class="mspace" style="margin-right:0.2778em;"></span><span class="mrel">=</span><span class="mspace" style="margin-right:0.2778em;"></span></span><span class="base"><span class="strut" style="height:1.2em;vertical-align:-0.35em;"></span><span class="mord mathnormal" style="margin-right:0.03148em;">k</span><span class="mord">∣</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3011em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">1</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">q</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3011em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mord">∣/</span><span class="mspace" style="margin-right:0.1667em;"></span><span class="minner"><span class="mopen delimcenter" style="top:0em;"><span class="delimsizing size1">(</span></span><span class="mopen">(</span><span class="mord"><span class="mord mathnormal">x</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3011em;"><span style="top:-2.55em;margin-left:0em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mord"><span class="mord mathnormal">x</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3011em;"><span style="top:-2.55em;margin-left:0em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">1</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mclose"><span class="mclose">)</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">+</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mopen">(</span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3011em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mbin">−</span><span class="mspace" style="margin-right:0.2222em;"></span><span class="mord"><span class="mord mathnormal" style="margin-right:0.03588em;">y</span><span class="msupsub"><span class="vlist-t vlist-t2"><span class="vlist-r"><span class="vlist" style="height:0.3011em;"><span style="top:-2.55em;margin-left:-0.0359em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">1</span></span></span></span><span class="vlist-s">​</span></span><span class="vlist-r"><span class="vlist" style="height:0.15em;"><span></span></span></span></span></span></span><span class="mclose"><span class="mclose">)</span><span class="msupsub"><span class="vlist-t"><span class="vlist-r"><span class="vlist" style="height:0.8141em;"><span style="top:-3.063em;margin-right:0.05em;"><span class="pstrut" style="height:2.7em;"></span><span class="sizing reset-size6 size3 mtight"><span class="mord mtight">2</span></span></span></span></span></span></span></span><span class="mclose delimcenter" style="top:0em;"><span class="delimsizing size1">)</span></span></span></span></span></span>. Make sure that you can justify this with a diagram. Check to see if you can use this formula to find the magnitudes for the previous problems.</p>
             </div>
